tests/success/special_array_consteval_subscript.bz
function test()
{
	consteval arr: [??: auto] = [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9 ];
	let _ = arr[3];
}
