tests/error/comptime/check_slice_construction19.bz
function test()
{
	(consteval {
		const p = __builtin_comptime_malloc(int32, 1);
		defer __builtin_comptime_free(p);
		__builtin_inplace_construct(p, 0);
		const q = __builtin_comptime_malloc(int32, 1);
		defer __builtin_comptime_free(q);
		__builtin_inplace_construct(q, 0);

		__builtin_slice_from_ptrs(q, p);
	});
}
